--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
 body {
-  background-color: lightblue;
+  background-image: linear-gradient(to bottom, #00e0ff, #00c5ff, #00a7ff, #0086ff, #125feb);
 }
 .list {
   font-size: 25px;
+}
+.card{
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+.card-img-top {
+  width: 100%;
+  height: 30vh;
+  object-fit: contain;
+}
+h3 {
+  text-decoration: underline;
+}
+.h3Header{
+  all: none;  
 }
